kubernetes/udemy_course_masterclass/deployments/deploy-recreate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test
  name: test
spec:
  replicas: 10
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
        - image: httpd
          name: httpd
  strategy:
    type: Recreate
