kubernetes/udemy_course_masterclass/deployments/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: default
spec:
  ports:
  - nodePort: 31888
    port: 8888
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: LoadBalancer
